# moe-inference-optimize

./: .gitignore  CLAUDE.md  README.md  main.py  pyproject.toml
results/: baseline_20260515_235317_L1024_O1_seed42.json  baseline_20260515_235317_L1024_O200_seed42.json  baseline_20260515_235317_L128_O1_seed42.json  baseline_20260515_235317_L128_O200_seed42.json  baseline_20260515_235317_L1500_O1_seed42.json  baseline_20260515_235317_L1500_O200_seed42.json  baseline_20260515_235317_L512_O1_seed42.json  baseline_20260515_235317_L512_O200_seed42.json  baseline_tp2_20260516_001846_L1024_O1_seed42.json  baseline_tp2_20260516_001846_L1024_O200_seed42.json  baseline_tp2_20260516_001846_L128_O1_seed42.json  baseline_tp2_20260516_001846_L128_O200_seed42.json  baseline_tp2_20260516_001846_L1500_O1_seed42.json  baseline_tp2_20260516_001846_L1500_O200_seed42.json  baseline_tp2_20260516_001846_L512_O1_seed42.json  baseline_tp2_20260516_001846_L512_O200_seed42.json  fp8_20260516_000019_L1024_O1_seed42.json  fp8_20260516_000019_L1024_O200_seed42.json  fp8_20260516_000019_L128_O1_seed42.json  fp8_20260516_000019_L128_O200_seed42.json  fp8_20260516_000019_L1500_O1_seed42.json  fp8_20260516_000019_L1500_O200_seed42.json  fp8_20260516_000019_L512_O1_seed42.json  fp8_20260516_000019_L512_O200_seed42.json
scripts/: bench_batching.py  bench_batching_decode.py  bench_compat_check.py  bench_kv_cache_footprint.py  bench_prefix_caching.py  benchmark_latency.py  build_deck.py  eval_suite.py  profile_decode.py  profile_prefill.py  run_pipeline.sh  smoke_test.py
talk/: deck.pptx  numbers.py
(+171 files in other folders)
